--- a/Components/Pages/TrainingSessionPages/Create.razor
+++ b/Components/Pages/TrainingSessionPages/Create.razor
@@ -12,19 +12,19 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <EditForm method="post" Model="TrainingSession" OnValidSubmit="AddTrainingSession" FormName="create" Enhance>
+        <EditForm Model="@TrainingSession" OnValidSubmit="AddTrainingSession" FormName="TrainingSessionCreate" Enhance>
             <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert"/>
+            <ValidationSummary class="text-danger" role="alert" />
             <div class="mb-3">
-                <label for="start" class="form-label">Start:</label> 
-                <InputDate id="start" @bind-Value="TrainingSession.Start" class="form-control" /> 
-                <ValidationMessage For="() => TrainingSession.Start" class="text-danger" /> 
-            </div>        
+                <label for="start" class="form-label">Start:</label>
+                <InputDate id="start" @bind-Value="TrainingSession.Start" class="inpt" />
+                <ValidationMessage For="@(() => TrainingSession.Start)" class="text-danger" />
+            </div>
             <div class="mb-3">
-                <label for="end" class="form-label">End:</label> 
-                <InputDate id="end" @bind-Value="TrainingSession.End" class="form-control" /> 
-                <ValidationMessage For="() => TrainingSession.End" class="text-danger" /> 
-            </div>        
+                <label for="end" class="form-label">End:</label>
+                <InputDate id="end" @bind-Value="TrainingSession.End" class="inpt" />
+                <ValidationMessage For="@(() => TrainingSession.End)" class="text-danger" />
+            </div>
             <button type="submit" class="btn btn-primary">Create</button>
         </EditForm>
     </div>
@@ -35,10 +35,8 @@
 </div>
 
 @code {
-    [SupplyParameterFromForm]
     private TrainingSession TrainingSession { get; set; } = new();
 
-    // To protect from overposting attacks, see https://learn.microsoft.com/aspnet/core/blazor/forms/#mitigate-overposting-attacks.
     private async Task AddTrainingSession()
     {
         using var context = DbFactory.CreateDbContext();
