Edit Page/ExercieEnrty wyświetlanie parametrów i dodawanie

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -19,14 +19,20 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="/exercisetypes">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Typ ćwiczenia
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="/trainingsessions">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Godziny Treningowe
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/exerciseentries">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Trening
             </NavLink>
         </div>
 
