--- a/Components/Pages/ExerciseEntryPages/Delete.razor
+++ b/Components/Pages/ExerciseEntryPages/Delete.razor
@@ -1,8 +1,12 @@
 ﻿@page "/exerciseentries/delete"
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.EntityFrameworkCore
 @using BeFitBlazor.Models
 @inject IDbContextFactory<BeFitBlazor.Data.ApplicationDbContext> DbFactory
 @inject NavigationManager NavigationManager
+@inject AuthenticationStateProvider _authenticationStateProvider
+
+@attribute [Authorize]
 
 <PageTitle>Delete</PageTitle>
 
@@ -50,10 +54,19 @@
     [SupplyParameterFromQuery]
     private int Id { get; set; }
 
+    async Task<string> getUserId()
+    {
+        var user = (await _authenticationStateProvider.GetAuthenticationStateAsync()).User;
+        var UserId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+        return UserId;
+    }
+
     protected override async Task OnInitializedAsync()
     {
         using var context = DbFactory.CreateDbContext();
-        exerciseentry = await context.ExerciseEntry.FirstOrDefaultAsync(m => m.Id == Id);
+        var UserId = await getUserId();
+        exerciseentry = await context.ExerciseEntry.Where(e => e.CreatedById == UserId).Include(e => e.TrainingSession).Include(e => e.ExerciseType).FirstOrDefaultAsync(m => m.Id == Id);
+
 
         if (exerciseentry is null)
         {
