--- a/Components/Pages/TrainingSessionPages/Create.razor
+++ b/Components/Pages/TrainingSessionPages/Create.razor
@@ -1,8 +1,13 @@
 ﻿@page "/trainingsessions/create"
+@using BeFitBlazor.Data
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.EntityFrameworkCore
 @using BeFitBlazor.Models
 @inject IDbContextFactory<BeFitBlazor.Data.ApplicationDbContext> DbFactory
 @inject NavigationManager NavigationManager
+@inject AuthenticationStateProvider _authenticationStateProvider
+
+@attribute [Authorize]
 
 <PageTitle>Create</PageTitle>
 
@@ -35,13 +40,32 @@
 </div>
 
 @code {
+
+    private ApplicationDbContext context = default!;
+    [SupplyParameterFromForm]
     private TrainingSession TrainingSession { get; set; } = new();
+    private List<ExerciseEntry> ExerciseEntries { get; set; } = new List<ExerciseEntry>();
+
+    async Task<string> getUserId()
+    {
+        var user = (await _authenticationStateProvider.GetAuthenticationStateAsync()).User;
+        var UserId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+        return UserId;
+    }
+
+    protected override void OnInitialized()
+    {
+        context = DbFactory.CreateDbContext();
+        ExerciseEntries = context.ExerciseEntry.ToList();
+    }
 
     private async Task AddTrainingSession()
     {
-        using var context = DbFactory.CreateDbContext();
+        TrainingSession.CreatedById = await getUserId();
+        context = DbFactory.CreateDbContext();
         context.TrainingSession.Add(TrainingSession);
         await context.SaveChangesAsync();
+
         NavigationManager.NavigateTo("/trainingsessions");
     }
 }
