Edit Wygląd w index Entry

--- a/Components/Pages/ExerciseEntryPages/Index.razor
+++ b/Components/Pages/ExerciseEntryPages/Index.razor
@@ -13,15 +13,15 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Index</h1>
+<h1>Treningi</h1>
 
 <p>
     <a href="exerciseentries/create">Create New</a>
 </p>
 
 <QuickGrid Class="table" Items="exerciseEntries">
-    <PropertyColumn Property="exerciseentry => exerciseentry.TrainingSessionId" Title="Data" />
-    <PropertyColumn Property="exerciseentry => exerciseentry.ExerciseTypeId" Title="Typ ćwiczenia"/>
+    <PropertyColumn Property="exerciseentry => exerciseentry.TrainingSessionName" Title="Data" />
+    <PropertyColumn Property="exerciseentry => exerciseentry.ExerciseTypeName" Title="Typ ćwiczenia" />
     <PropertyColumn Property="exerciseentry => exerciseentry.Weight" />
     <PropertyColumn Property="exerciseentry => exerciseentry.Sets" />
     <PropertyColumn Property="exerciseentry => exerciseentry.Reps" />
