--- a/Components/Pages/TrainingSessionPages/Index.razor
+++ b/Components/Pages/TrainingSessionPages/Index.razor
@@ -13,7 +13,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Index</h1>
+<h1>Godziny treningów</h1>
 
 <p>
     <a href="trainingsessions/create">Create New</a>
