--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Witamy w BeFit!</h1>
 
-Welcome to your new app.
+Witamy w aplikacji która pomoże ci spalić kalorie.
