--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -36,11 +36,11 @@
             </NavLink>
         </div>
 
-        @* <div class="nav-item px-3"> *@
-        @*     <NavLink class="nav-link" href="/exercisestats"> *@
-        @*         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Stats *@
-        @*     </NavLink> *@
-        @* </div> *@
+        <div class="nav-item px-3"> 
+            <NavLink class="nav-link" href="/exercisestats"> 
+               <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Stats 
+            </NavLink> 
+         </div>
 
         <AuthorizeView>
             <Authorized>
